@@ -1,5 +1,9 @@
 2005-10-12  Erik Hjortsberg  <erik@katastrof.nu>
 
+	* src/components/ogre/AvatarCamera.cpp, src/components/ogre/EmberEntityUserObject.h, src/components/ogre/EmberOgre.cpp, src/components/ogre/EmberPhysicalEntity.cpp: adapt to updated OgreOpcode
+
+2005-10-12  Erik Hjortsberg  <erik@katastrof.nu>
+
 	* src/components/ogre/ogreopcode/*: updated to OgreOpcode 0.0.4
 
 2005-10-12  Erik Hjortsberg  <erik@katastrof.nu>
